--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
     </header>
     <div class="hero"></div>
     <main>
-        <section id=section class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+        <section class="search-engine-optimization section1">
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left pic" />
                  <h2>Search Engine Optimization</h2>
               <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                </p>
         </section>
-        <section id=section class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        <section class="online-reputation-management section1">
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right pic" />
                 <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id=section class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        <section class="social-media-marketing section1">
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left pic" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -49,26 +49,27 @@
         </section>
     </main>
     <article class="benefits">
-        <section class="benefit-lead">
+        <section class="benefit">
             <h4>Lead Generation</h4>
-            <img src="./assets/images/lead-generation.png" />
+            <img class="image" src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-            <section class="benefit-brand">
+            <section class="benefit">
                 <h4>Brand Awareness</h4>
-            <img src="./assets/images/brand-awareness.png" />
+            <img class="image" src="./assets/images/brand-awareness.png" />
                 <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
-         <div class="benefit-cost">
+            </section>
+         <section class="benefit">
             <h4>Cost Management</h4>
-            <img src="./assets/images/cost-management.png"></img>
+            <img class="image" src="./assets/images/cost-management.png"></img>
                  <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
-        </div>
+         </section>
     </article>
     <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
